<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="-20dp"
        android:visibility="gone">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_cadastro"
            style="@style/Button.Filled"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/title_activity_register_password" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilGeneratedPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconDrawable="@drawable/ic_refresh"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtGeneratedPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:hint="@string/your_password"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_password_size" />

        <TextView
            android:id="@+id/txt_qtde_password_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <SeekBar
            android:id="@+id/seek_password_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="16"
            android:min="4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_upper_case_size" />

        <TextView
            android:id="@+id/txt_qtde_upper_case"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <SeekBar
            android:id="@+id/seek_upper_cases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:min="0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_low_case_size" />

        <TextView
            android:id="@+id/txt_qtde_lower_case"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <com.google.android.material.slider.Slider
            android:id="@+id/sliderLowerCases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="1"
            android:contentDescription="AHAHAHHAHAH"
            android:valueFrom="0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_special_char_size" />

        <TextView
            android:id="@+id/txt_qtde_special_char"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <SeekBar
            android:id="@+id/seek_special_char"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:min="0" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_select_site" />

        <Spinner
            android:id="@+id/spinner_site_selected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:verticalScrollbarPosition="right" />

        <EditText
            android:id="@+id/newSiteLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_site_link"
            android:inputType="text"
            android:lines="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegisterPassword"
            style="@style/Button.Filled"
            android:text="@string/btn_cadastrar_senha" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_shuffle_password"
            style="@style/Button.Transparent"
            android:text="@string/shuffle_password"
            android:visibility="gone" />


    </LinearLayout>


</LinearLayout>