<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".newPassword.CadastrarSenhaView">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="-20dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_cadastro"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/title_activity_register_password" />

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/edt_senha_gerada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_password_size" />

        <TextView
            android:id="@+id/txt_qtde_password_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <SeekBar
            android:id="@+id/seek_password_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="16"
            android:min="4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_upper_case_size" />

        <TextView
            android:id="@+id/txt_qtde_upper_case"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <SeekBar
            android:id="@+id/seek_upper_cases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:min="0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_low_case_size" />

        <TextView
            android:id="@+id/txt_qtde_lower_case"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <SeekBar
            android:id="@+id/seek_lower_cases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:min="0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_special_char_size" />

        <TextView
            android:id="@+id/txt_qtde_special_char"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <SeekBar
            android:id="@+id/seek_special_char"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:min="0" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_select_site" />

        <Spinner
            android:id="@+id/spinner_site_selected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:verticalScrollbarPosition="right" />

        <EditText
            android:id="@+id/newSiteLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_site_link"
            android:inputType="text"
            android:lines="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_shuffle_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:text="@string/btn_shuffle_password" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/btn_cadastrar_senha" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>