<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/psswdEditIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/default_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hint_site_name"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/psswdEditName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/hint_site_name"
        android:inputType="textCapWords"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hint_new_password"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/psswdEditPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/hint_new_password"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hint_site_link"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/psswdEditSiteLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/hint_site_link"
        android:text="Title"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fabConfirmEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_check"
        app:fab_colorNormal="@color/logo_background"
        app:fab_colorPressed="@color/logo_background" />
</LinearLayout>